// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar render inverted badges 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      42
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      13
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete"
    >
      <CircleIcon />
       
      7
       
      <span
        className="outcome-past-tense"
      >
        Incomplete
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by percentage 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIcon />
       
      42% 
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIcon />
       
      13% 
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete"
    >
      <CircleIcon />
       
      7% 
       
      <span
        className="outcome-past-tense"
      >
        Incomplete
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by percentage 2`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIcon />
       
      42
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIcon />
       
      13
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete"
    >
      <CircleIcon />
       
      7
       
      <span
        className="outcome-past-tense"
      >
        Incomplete
      </span>
    </span>
  </div>
</div>
`;
